--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-number-format": "^5.4.2",
     "react-toastify": "^10.0.6",
     "recharts": "^2.14.1",
+    "swiper": "^11.2.0",
     "tailwind-merge": "^2.5.4",
     "zod": "^3.23.8"
   },
