--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "next": "^14.2.22",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.4.0",
     "react-number-format": "^5.4.2",
