--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "embla-carousel-react": "^8.5.1",
+    "firebase": "^11.3.1",
     "input-otp": "^1.4.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.460.0",
     "next": "^14.2.22",
     "react": "^18.3.1",
