--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@reduxjs/toolkit": "^2.6.0",
     "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
@@ -50,6 +51,7 @@
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.4.0",
     "react-number-format": "^5.4.2",
+    "react-redux": "^9.2.0",
     "react-toastify": "^10.0.6",
     "recharts": "^2.14.1",
     "swiper": "^11.2.0",
