--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.460.0",
     "next": "^14.2.22",
+    "next-auth": "^4.24.11",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
