--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-redux": "^9.2.0",
     "react-toastify": "^10.0.6",
     "recharts": "^2.14.1",
+    "sharp": "^0.33.5",
     "swiper": "^11.2.0",
     "tailwind-merge": "^2.5.4",
     "zod": "^3.23.8"
