--- a/package.json
+++ b/package.json
@@ -39,10 +39,13 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.1",
     "firebase": "^11.3.1",
+    "framer-motion": "^12.7.4",
     "input-otp": "^1.4.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.460.0",
+    "motion": "^12.7.4",
     "next": "^14.2.22",
+    "nodemailer": "^6.10.1",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -61,6 +64,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "eslint": "^8",
